<resources>
    <string name="app_name">MusicPractice</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="base_note">Alap hang:</string>
    <string name="options">Beállítások</string>
    <string name="clear_statistics">Statisztika törlése:</string>
    <string name="clear">Törlés</string>
    <string name="statisztika">Statisztika</string>
    <string name="jra_j_tsz_s">Hang lejátszás</string>
    <string name="tiszta_okt_v">Tiszta Oktáv</string>
    <string name="nagy_septim">Nagy Septim</string>
    <string name="kis_septim">Kis Septim</string>
    <string name="nagy_szext">Nagy Szext</string>
    <string name="kis_szext">Kis Szext</string>
    <string name="tiszta_kvint">Tiszta Kvint</string>
    <string name="sz_k_tett_kvint">Szűkített Kvint</string>
    <string name="tiszta_kv_rt">Tiszta Kvárt</string>
    <string name="nagy_terc">Nagy Terc</string>
    <string name="kis_terc">Kis Terc</string>
    <string name="nagy_secund">Nagy Secund</string>
    <string name="kis_secund">Kis Secund</string>
    <string name="tiszta_pr_m">Tiszta Prím</string>

    <string-array name="notes_array">
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>A</item>
        <item>B</item>
    </string-array>
</resources>
