<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="9"
    android:background="@drawable/paper">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnPrim"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:tag=""
            android:text="@string/tiszta_pr_m"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BtnKSec"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnKSec"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/kis_secund"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BtnPrim"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnNSec"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/nagy_secund"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BtnKTerc"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnKTerc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/kis_terc"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BtnNSec"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnNTerc"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/nagy_terc"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BtnKvart"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnKvart"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/tiszta_kv_rt"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BtnNTerc"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnSZKvint"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/sz_k_tett_kvint"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BtnKvint"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnKvint"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/tiszta_kvint"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BtnSZKvint"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnKSzext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/kis_szext"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BtnNSzext"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnNSzext"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/nagy_szext"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BtnKSzext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnKSept"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/kis_septim"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BtnNSept"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnNSept"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/nagy_septim"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BtnKSept"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/BtnOkt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/tiszta_okt_v"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <Button
            android:id="@+id/BtnStats"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/statisztika"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/BtnReplay"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/BtnReplay"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonsback"
            android:text="@string/jra_j_tsz_s"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/BtnStats"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>